@@ -5,7 +5,7 @@ xmlns:dc="http://purl.org/dc/elements/1.1/"
 >
 <title mode="escaped">My Blog's Title</title>
 <link rel="alternate" type="text/html" href="/index.html"/>
-<modified>2004-06-21T22:32:47-04:00</modified>
+<modified>2004-06-24T02:14:43-04:00</modified>
 <author>
 <name>n1xt3r</name>
 <url>/index.html</url>
