@@ -64,7 +64,8 @@
           <br />
           Posted by <span class="item-creator">n1xt3r</span> | <a class="link" href=
           "/archives/monthly/2004-01.html#e2004-01-18T17_12_12.htm">Permalink</a> | Categories: <a href=
-          "/archives/cat_1.html">NanoBlogger Help</a> <!-- <br /><a href="/1/2004-01-18T17_12_12.html#comments">Comments</a> -->
+          "/archives/cat_1.html">NanoBlogger Help</a> 
+          <!-- <br /><a href="/archives/permalinks/2004-01-18T17_12_12.html#comments">Comments</a> -->
         </div>
       </div>
     </div>
@@ -221,7 +222,7 @@
     <div class="side">
       Total entries: 1<br />
       Last entry: January 18, 2004 5:12 PM<br />
-      Last updated: June 21, 2004 10:32 PM
+      Last updated: June 24, 2004 2:14 AM
     </div>
 
     <div class="powered">
